force-app/main/default/objects/Shopify_Product_Export__e/Shopify_Product_Export__e.object-meta.xml
<CustomObject>
    <label>Shopify Product Export</label>
    <pluralLabel>Shopify Product Exports</pluralLabel>
</CustomObject>