force-app/main/default/objects/Shopify_Product_Export__e/fields/Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Origin__c</fullName>
    <label>Country Of Origin</label>
    <length>2</length>
    <type>Text</type>
</CustomField>