force-app/main/default/objects/Shopify_Product_Export__e/fields/HS_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Code__c</fullName>
    <label>HS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>