force-app/main/default/objects/Shopify_Product_Export__e/fields/InventoryItemId__c.field-meta.xml
<CustomField>
    <fullName>InventoryItemId__c</fullName>
    <label>InventoryItemId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>