force-app/main/default/objects/Shopify_Product_Export__e/fields/Shop_URL__c.field-meta.xml
<CustomField>
    <fullName>Shop_URL__c</fullName>
    <label>Shop URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>